# claude_ai_usage_widget

./: .gitignore  CHANGELOG.md  LICENSE  README.md  claude_token_tracker.py  claude_usage_widget.py  install.sh  pyproject.toml  uninstall.sh  upgrade.sh  validate.sh
cct/: __init__.py  blocks.py  budgets.py  cli.py  cloud.py  config.py  format.py  gui.py  notifications.py  parser.py  pricing.py  single_instance.py  store.py
tests/: conftest.py  test_blocks.py  test_budgets.py  test_cli.py  test_cloud.py  test_format.py  test_notifications.py  test_parser.py  test_pricing.py  test_store.py
